
/* -- define and set mandatory(constant) outcome_id's --*/
UPDATE `outcome` SET `permanent` = '1' WHERE `outcome`.`outcome_id` IN (1,2,3,7,9,10,14,17,18,19) ;

/* -- add `outcomes` parameter ,  define default list of outcome_ID's to be enabled for new questionnaries --*/
ALTER TABLE `questionnaire` ADD `outcomes` VARCHAR(256) NULL DEFAULT '1,2,3,7,9,10,14,17,18,19' COMMENT 'Comma-separated string of outcomes defined for the questionnaire' AFTER `enabled`;

/* -- enable all outcomes for existing questionnaires -- */
UPDATE `questionnaire` SET `outcomes` = '1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,40,41,42,43,44,45' ;


queXS 1.13.1 - Changes since 1.13.0

Fixed Bug: Remove references to old DEFAULT_TIME_ZONE config constant (use get_settings instead)
Fixed Bug: lp:1480880 - disable create new questionnaire if no active Limesurvey available
Fixed Bug: Update FreePBX compatability to 2.11 /  Make IAX extensions start from 1000
Fixed Bug: Checkbox group selection and HTML errors in operator / skills / assignment pages
Fixed Bug: Max call attempts should be temporary outcome as value can change
Fixed Bug: Fix sample import given new database structure (sample_var table)
Fixed Bug: lp:1408870 Add "Maximum attempts reached" as an outcome
Fixed Bug: PHP notices when using call history

New Feature: Pre-generation of cases and copying of sample variables to Limesurvey attributes for "Web First" then CATI methodology

Updated translations from Launchpad - Thank you!

Database updates required:

/* Fix max attempt outcomes */

DELETE FROM `outcome` WHERE outcome_id IN (42,43,44,45);
INSERT INTO `outcome` (`outcome_id`, `aapor_id`, `description`, `default_delay_minutes`, `outcome_type_id`, `tryanother`, `contacted`, `tryagain`, `eligible`, `require_note`, `calc`) VALUES(42, '3.90', 'Max call attempts reached (Unknown eligibility)', 0, 1, 0, 1, 1, 0, 0, 'UH');